fix horizontal scrollbar

--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -1,5 +1,4 @@
 .hero {
-  width: 100vw;
   height: 100vh;
   position: relative;
 }
